<resources>

    <string name="app_name">eMovieReviews</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">eMR</string>
    <string name="btn_Signup">Signup</string>
    <string name="btn_Login">Login</string>
    <string name="txtMovieList">List Movies</string>
    <string name="random_image_desc">Image description</string>
    <string name="details">Provide your details</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_Register">Register</string>
    <string name="email">Email</string>
    <string name="btn_NewReview">Post new review</string>
    <string name="review_title">Title</string>
    <string name="review_description">Description</string>
    <string name="review_review">Review</string>
    <string name="btn_Post">Post</string>
    <string name="btn_Like">Like</string>
    <string name="btn_Disslike">Dont like</string>
    <string name="reviews">List User Reviews</string>
    <string name="addReview">Add review</string>
    <string name="txtReview">Review</string>
    <string name="txtComments">Comments</string>
    <string name="txtVotes">Rating</string>
    <string name="txtUser">User</string>
    <string name="btnAddComment">Post</string>
    <string name="enterComment">Write Comment</string>
    <string name="listAllComments">View All Comments</string>
    <string name="btn_Logout">Logout</string>
    <string name="menu_Logout">Logout</string>
    <string name="menu_Movies">Movies</string>
    <string name="menu_Login">Login</string>

</resources>