<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_title"
        android:textColor="@color/blue" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_review"
        android:textColor="@color/blue" />

    <EditText
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/Post"
        style="@style/buttonStyle"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_buton"
        android:onClick="postReview"
        android:text="@string/btn_Post" />

</LinearLayout>