<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dip" >

    <TextView
        android:id="@+id/txtViewTitle"
        style="@style/Sections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_hard"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtViewReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Sections2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtVotes" />

        <TextView
            style="@style/Sections2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="170dip"
            android:layout_weight="1"
            android:text="@string/txtUser" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtViewVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="200dip"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLike"
            style="@style/buttonStyle"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_buton"
            android:clickable="true"
            android:contentDescription="@string/btn_Like"
            android:onClick="like"
            android:text="@string/btn_Like" />

        <Button
            android:id="@+id/btnDisslike"
            style="@style/buttonStyle"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_buton"
            android:clickable="true"
            android:contentDescription="@string/btn_Disslike"
            android:onClick="disslike"
            android:text="@string/btn_Disslike" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip" >

        <EditText
            android:id="@+id/comment"
            android:layout_width="245dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textImeMultiLine"
            android:text="@string/enterComment"
            android:textSize="10dip" />

        <Button
            android:id="@+id/btnAddComment"
            style="@style/buttonStyle"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/custom_buton"
            android:clickable="true"
            android:onClick="postComment"
            android:paddingRight="10dip"
            android:text="@string/btn_Post" />
    </LinearLayout>

    <TextView
        android:id="@+id/viewAllComments"
        style="@style/Sections2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:clickable="true"
        android:onClick="showComments"
        android:text="@string/listAllComments"
        android:textSize="15dip"
        android:textStyle="bold" />

</LinearLayout>