<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        style="@style/Sections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="250dp"
        android:layout_height="160dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20dip"
        android:contentDescription="@string/random_image_desc" />

    <Button
        android:id="@+id/addReview"
        style="@style/buttonStyle"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_buton"
        android:clickable="true"
        android:onClick="addReview"
        android:text="@string/addReview" />

    <Button
        android:id="@+id/reviews"
        style="@style/buttonStyle"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:background="@drawable/custom_buton"
        android:clickable="true"
        android:onClick="openUsersReviews"
        android:text="@string/reviews" />

</LinearLayout>